@@ -710,6 +710,9 @@ g_mime_message_get_body (const GMimeMessage *message, gboolean want_plain, gbool
 	const char *content;
 	char *body = NULL;
 	size_t len = 0;
+
+	g_return_val_if_fail (message!=NULL, NULL);
+	g_return_val_if_fail (is_html!=NULL, NULL);
 	
 	type = g_mime_part_get_content_type (message->mime_part);
 	if (g_mime_content_type_is_type (type, "text", "*")) {
